Create Unit tests for Services